split posts from reddit into batches of 50